--- a/src/c/CudaImageProcessor_dll.vcxproj
+++ b/src/c/CudaImageProcessor_dll.vcxproj
@@ -170,6 +170,8 @@ copy Cuda\Defines.h ..\..\include\.
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
       <CodeGeneration>compute_30,sm_30;compute_35,sm_35;</CodeGeneration>
+      <PtxAsOptionV>false</PtxAsOptionV>
+      <MaxRegCount>63</MaxRegCount>
     </CudaCompile>
     <Lib>
       <AdditionalDependencies>cudart_static.lib</AdditionalDependencies>
@@ -231,6 +233,7 @@ copy Cuda\Defines.h ..\..\include\.</Command>
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
       <CodeGeneration>compute_30,sm_30;compute_35,sm_35;</CodeGeneration>
+      <MaxRegCount>63</MaxRegCount>
     </CudaCompile>
     <Lib>
       <AdditionalDependencies>cudart_static.lib</AdditionalDependencies>
