--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -64,6 +64,8 @@
     </Link>
     <PostBuildEvent>
       <Command>mkdir ..\..\bin
+echo copy $(OutDir)\CudaMex.dll ..\..\bin\CudaMex_d.mexw64
+copy $(OutDir)\CudaMex.dll ..\..\bin\CudaMex_d.mexw64
 echo copy $(OutDir)\CudaMex.dll ..\..\src\MATLAB\CudaMex_d.mexw64
 copy $(OutDir)\CudaMex.dll ..\..\src\MATLAB\CudaMex_d.mexw64</Command>
     </PostBuildEvent>
