--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -132,6 +132,7 @@ copy $(OutDir)\CudaMex.dll ..\..\src\MATLAB\CudaMex.mexw64</Command>
     <ClCompile Include="Mex\MexSegment.cpp" />
     <ClCompile Include="Mex\MexSumArray.cpp" />
     <ClCompile Include="Mex\MexThresholdFilter.cpp" />
+    <ClCompile Include="Mex\MexVariance.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Mex\CudaMex.def" />
