--- a/src/c/CudaImageProcessor_lib.vcxproj.filters
+++ b/src/c/CudaImageProcessor_lib.vcxproj.filters
@@ -116,6 +116,9 @@
     <ClInclude Include="Cuda\CudaMarkovRandomFieldDenoiser.cuh">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cuda\CudaLinearUnmixing.cuh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cuda\CHelpers.cpp">
