Moved the def file into the resource section of the solution

--- a/src/c/CudaMex.vcxproj.filters
+++ b/src/c/CudaMex.vcxproj.filters
@@ -128,7 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Mex\CudaMex.def">
-      <Filter>Source Files</Filter>
+      <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
 </Project>
