--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -108,6 +108,7 @@ copy $(OutDir)\CudaMex.dll ..\..\src\MATLAB\CudaMex.mexw64</Command>
     <ClCompile Include="Mex\MexApplyPolyTransformation.cpp" />
     <ClCompile Include="Mex\MexCommand.cpp" />
     <ClCompile Include="Mex\MexContrastEnhancement.cpp" />
+    <ClCompile Include="Mex\MexDeviceCount.cpp" />
     <ClCompile Include="Mex\MexGaussianFilter.cpp" />
     <ClCompile Include="Mex\MexHistogram.cpp" />
     <ClCompile Include="Mex\MexImagePow.cpp" />
