--- a/src/c/CudaImageProcessor_lib.vcxproj.filters
+++ b/src/c/CudaImageProcessor_lib.vcxproj.filters
@@ -122,6 +122,9 @@
     <ClInclude Include="Cuda\CudaDeviceCount.cuh">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cuda\CudaRidgeRegistaration.cuh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cuda\CHelpers.cpp">
