--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -132,7 +132,7 @@ copy $(OutDir)\CudaMex.dll ..\..\src\MATLAB\CudaMex.mexw64</Command>
     <ClCompile Include="Mex\MexOtsuThresholdFilter.cpp" />
     <ClCompile Include="Mex\MexOtsuThresholdValue.cpp" />
     <ClCompile Include="Mex\MexReduceImage.cpp" />
-    <ClCompile Include="Mex\MexRigidRegistration.cpp" />
+    <ClCompile Include="Mex\MexRidgidRegistration.cpp" />
     <ClCompile Include="Mex\MexSegment.cpp" />
     <ClCompile Include="Mex\MexSumArray.cpp" />
     <ClCompile Include="Mex\MexThresholdFilter.cpp" />
