--- a/src/c/CudaImageProcessor_lib.vcxproj.filters
+++ b/src/c/CudaImageProcessor_lib.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClInclude Include="Cuda\CudaRidgidRegistaration.cuh">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cuda\CudaImageCopy.cuh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cuda\CHelpers.cpp">
