Packaging up the matlab directory

--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -63,11 +63,8 @@
       <ModuleDefinitionFile>$(SolutionDir)Mex\CudaMex.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir ..\..\bin
-echo copy $(OutDir)\CudaMex.dll ..\..\bin\CudaMex_d.mexw64
-copy $(OutDir)\CudaMex.dll ..\..\bin\CudaMex_d.mexw64
-echo copy $(OutDir)\CudaMex.dll ..\..\src\MATLAB\CudaMex_d.mexw64
-copy $(OutDir)\CudaMex.dll ..\..\src\MATLAB\CudaMex_d.mexw64</Command>
+      <Command>echo copy $(OutDir)CudaMex.dll "..\MATLAB\+Cuda\CudaMex.mexw64"
+copy $(OutDir)CudaMex.dll "..\MATLAB\+Cuda\CudaMex.mexw64"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -89,11 +86,8 @@ copy $(OutDir)\CudaMex.dll ..\..\src\MATLAB\CudaMex_d.mexw64</Command>
       <ModuleDefinitionFile>$(SolutionDir)Mex\CudaMex.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir ..\..\bin
-echo copy $(OutDir)\CudaMex.dll ..\..\bin\CudaMex.mexw64
-copy $(OutDir)\CudaMex.dll ..\..\bin\CudaMex.mexw64
-echo copy $(OutDir)\CudaMex.dll ..\..\src\MATLAB\CudaMex.mexw64
-copy $(OutDir)\CudaMex.dll ..\..\src\MATLAB\CudaMex.mexw64</Command>
+      <Command>echo copy $(OutDir)CudaMex.dll "..\MATLAB\+Cuda\CudaMex.mexw64"
+copy $(OutDir)CudaMex.dll "..\MATLAB\+Cuda\CudaMex.mexw64"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
