--- a/src/c/CudaImageProcessor_lib.vcxproj
+++ b/src/c/CudaImageProcessor_lib.vcxproj
@@ -160,21 +160,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <AdditionalDependencies>cudart_static.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir ..\..\bin ..\..\include ..\..\lib
-echo copy $(OutDir)\CudaImageProcessor_d.dll ..\..\bin\.
-copy $(OutDir)\CudaImageProcessor_d.dll ..\..\bin\.
-echo copy $(OutDir)\CudaImageProcessor_d.lib ..\..\lib\.
-copy $(OutDir)\CudaImageProcessor_d.lib ..\..\lib\.
-echo copy Cuda\CWrappers.cuh ..\..\include\.
-copy Cuda\CWrappers.cuh ..\..\include\.
-echo copy Cuda\CHelpers.h ..\..\include\.
-copy Cuda\CHelpers.h ..\..\include\.
-echo copy Cuda\Vec.h ..\..\include\.
-copy Cuda\Vec.h ..\..\include\.
-echo copy Cuda\VecFuncs.h ..\..\include\.
-copy Cuda\VecFuncs.h ..\..\include\.
-echo copy Cuda\Defines.h ..\..\include\.
-copy Cuda\Defines.h ..\..\include\.
+      <Command>
 
 </Command>
     </PostBuildEvent>
@@ -220,22 +206,8 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <AdditionalDependencies>cudart_static.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir ..\..\bin ..\..\include ..\..\lib
-echo copy $(OutDir)\CudaImageProcessor.dll ..\..\bin\.
-copy $(OutDir)\CudaImageProcessor.dll ..\..\bin\.
-echo copy $(OutDir)\CudaImageProcessor.lib ..\..\lib\.
-copy $(OutDir)\CudaImageProcessor.lib ..\..\lib\.
-echo copy Cuda\CWrappers.cuh ..\..\include\.
-copy Cuda\CWrappers.cuh ..\..\include\.
-echo copy Cuda\CHelpers.h ..\..\include\.
-copy Cuda\CHelpers.h ..\..\include\.
-echo copy Cuda\Vec.h ..\..\include\.
-copy Cuda\Vec.h ..\..\include\.
-echo copy Cuda\VecFuncs.h ..\..\include\.
-copy Cuda\VecFuncs.h ..\..\include\.
-echo copy Cuda\Defines.h ..\..\include\.
-copy Cuda\Defines.h ..\..\include\.
-</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
