--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -126,6 +126,7 @@ copy $(OutDir)\CudaMex.dll "..\..\src\MATLAB\+Cuda\Mex.mexw64"</Command>
     <ClCompile Include="Mex\MexOtsuThresholdFilter.cpp" />
     <ClCompile Include="Mex\MexOtsuThresholdValue.cpp" />
     <ClCompile Include="Mex\MexReduceImage.cpp" />
+    <ClCompile Include="Mex\MexRegionGrowing.cpp" />
     <ClCompile Include="Mex\MexRidgidRegistration.cpp" />
     <ClCompile Include="Mex\MexSegment.cpp" />
     <ClCompile Include="Mex\MexStdFilter.cpp" />
