--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -104,6 +104,7 @@ copy $(OutDir)CudaMex.dll "$(ProjectDir)Mex.mexw64"</Command>
     <ClCompile Include="Mex\MexCommand.cpp" />
     <ClCompile Include="Mex\MexContrastEnhancement.cpp" />
     <ClCompile Include="Mex\MexDeviceCount.cpp" />
+    <ClCompile Include="Mex\MexDeviceStats.cpp" />
     <ClCompile Include="Mex\MexGaussianFilter.cpp" />
     <ClCompile Include="Mex\MexHistogram.cpp" />
     <ClCompile Include="Mex\MexImagePow.cpp" />
