--- a/src/c/CudaMex.vcxproj.filters
+++ b/src/c/CudaMex.vcxproj.filters
@@ -143,6 +143,9 @@
     <ClCompile Include="Mex\MexDeviceStats.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MexResize.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Mex\CudaMex.def">
