--- a/src/c/CudaImageProcessor_dll.vcxproj.filters
+++ b/src/c/CudaImageProcessor_dll.vcxproj.filters
@@ -143,6 +143,9 @@
     <ClInclude Include="Cuda\CudaDeviceStats.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CudaResize.cuh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cuda\CHelpers.cpp">
