Added a resize kernel stub

--- a/src/c/CudaImageProcessor_dll.vcxproj
+++ b/src/c/CudaImageProcessor_dll.vcxproj
@@ -51,6 +51,7 @@
     <ClInclude Include="Cuda\CudaPolyTransferFunc.cuh" />
     <ClInclude Include="Cuda\CudaPow.cuh" />
     <ClInclude Include="Cuda\CudaRegionGrowing.cuh" />
+    <ClInclude Include="Cuda\CudaResize.cuh" />
     <ClInclude Include="Cuda\CudaRidgidRegistaration.cuh" />
     <ClInclude Include="Cuda\CudaSegment.cuh" />
     <ClInclude Include="Cuda\CudaStdFilter.cuh" />
