Moved MexResize into the correct subfolder and updated vc project.

--- a/src/c/CudaMex.vcxproj.filters
+++ b/src/c/CudaMex.vcxproj.filters
@@ -140,13 +140,13 @@
     <ClCompile Include="Mex\MexDeviceStats.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MexResize.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Mex\ScopedProcessMutex.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Mex\MexEntropyFilter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Mex\MexResize.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
