--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -97,7 +97,6 @@ copy $(OutDir)CudaMex.dll "$(ProjectDir)Mex.mexw64"</Command>
     <ClInclude Include="Mex\ScopedProcessMutex.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MexResize.cpp" />
     <ClCompile Include="Mex\CudaMex.cpp" />
     <ClCompile Include="Mex\MexAddConstant.cpp" />
     <ClCompile Include="Mex\MexAddImageWith.cpp" />
@@ -130,6 +129,7 @@ copy $(OutDir)CudaMex.dll "$(ProjectDir)Mex.mexw64"</Command>
     <ClCompile Include="Mex\MexOtsuThresholdFilter.cpp" />
     <ClCompile Include="Mex\MexOtsuThresholdValue.cpp" />
     <ClCompile Include="Mex\MexRegionGrowing.cpp" />
+    <ClCompile Include="Mex\MexResize.cpp" />
     <ClCompile Include="Mex\MexSegment.cpp" />
     <ClCompile Include="Mex\MexStdFilter.cpp" />
     <ClCompile Include="Mex\MexSumArray.cpp" />
