--- a/src/c/CudaImageProcessor_dll.vcxproj.filters
+++ b/src/c/CudaImageProcessor_dll.vcxproj.filters
@@ -146,6 +146,9 @@
     <ClInclude Include="Cuda\CudaLoG.cuh">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cuda\KernelIterator.cuh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cuda\CHelpers.cpp">
@@ -163,6 +166,9 @@
       <Filter>Source Files</Filter>
     </CudaCompile>
     <CudaCompile Include="Cuda\ImageChunk.cu">
+      <Filter>Source Files</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Cuda\KernelIterator.cu">
       <Filter>Source Files</Filter>
     </CudaCompile>
   </ItemGroup>
