--- a/src/c/CudaImageProcessor_dll.vcxproj.filters
+++ b/src/c/CudaImageProcessor_dll.vcxproj.filters
@@ -149,6 +149,9 @@
     <ClInclude Include="Cuda\KernelIterator.cuh">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cuda\CudaNeighborhoodSum.cuh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cuda\CHelpers.cpp">
